<resources>
    <string name="app_name">TheCheezery</string>
    <string name="welcome">Welcome to The Cheezery!</string>
    <string name="description">Home of the most wonderful desserts
        ever seen (and tested) by the human being.</string>
    <string name="get_started">Get started!</string>

    <!-- Fonts families  -->
    <string name="light">sans-serif-light</string>
    <string name="condensed">sans-serif-condensed</string>
    <string name="thin">sans-serif-thin</string>
    <string name="medium">sans-serif-medium</string>
    <string name="regular">sans-serif</string>

    <!-- Register Fields  -->
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="conditions">I have read and accept terms and
        conditions of The Cheezery</string>
    <string name="sign_in">Sign in</string>

    <!-- Menu -->
    <string name="our_menu">Our Menu</string>
    <string name="cold_drinks">Cold Drinks</string>
    <string name="hot_drinks">Hot Drinks</string>
    <string name="sweets">Sweets</string>
    <string name="salties">Salties</string>
    <string name="combos">Combos</string>
    <string name="personalized">Personalized</string>

    <!-- Cold Drinks -->
    <string name="caramel_frap">Caramel Frap</string>
    <string name="caramel_frap_desc">Caramel syrup meets cofee, milk and ice and whipped cream and buttery caramel sause layer the love on top</string>
    <string name="caramel_frap_price">$5</string>

</resources>
