<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/caramel_frap"
        android:layout_marginVertical="15dp"
        />

    <LinearLayout
        android:layout_marginLeft="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        >

    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@string/condensed"
        android:textSize="20sp"
        android:text="@string/caramel_frap"
        />

     <TextView
         android:id="@+id/product_description"
         android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:fontFamily="@string/light"
         android:textSize="10sp"
         android:text="@string/caramel_frap_desc"
         android:textColor="@color/dustyBlack"
         />

    </LinearLayout>

    <TextView
        android:id="@+id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@color/anotherPurple"
        android:textSize="19sp"
        android:text="@string/caramel_frap_price"
        android:gravity="center_vertical"
        android:layout_marginLeft="30dp"
        />

</LinearLayout>