<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purpleishGrey"
    >

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="461dp"
        android:scaleType="centerCrop"
        android:src="@drawable/the_cheezery"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/purpleishGrey"
        >

    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:fontFamily="@string/light"
        android:textColor="@color/dustyWhite"
        android:textSize="@dimen/titleSize"
        android:textAlignment="center"
        />

    <TextView
        android:layout_marginTop="15dp"
        android:paddingHorizontal="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:fontFamily="@string/light"
        android:textColor="@color/dustyWhite"
        android:textSize="@dimen/regText"
        android:textAlignment="center"
        android:textStyle="italic"
        />

    <Button
        android:id="@+id/buttonp"
        android:layout_marginTop="35dp"
        android:layout_width="219dp"
        android:layout_height="40dp"
        android:text="@string/get_started"
        android:fontFamily="@string/regular"
        android:textColor="@color/dustyWhite"
        android:textSize="@dimen/regText"
        android:textAlignment="center"
        android:background="@drawable/round_button"
        android:layout_gravity="center"
        />

    </LinearLayout>

</LinearLayout>

</ScrollView>